# trust

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  ideas.md  messages.rs  old.rs  out.rs
macros/src/: lib.rs
proxy/: cmp_tiles.py  log.txt  logs.txt  out.txt  parsing.py  proxy.py  real.txt  run.bat
scripts/: convert_drop_items.py  convert_drop_tile_items.py  convert_drop_wall_items.py  convert_ids.py  convert_item_flags.py  convert_player_item_ids.py  convert_tile_flags.py  shared.py
src/: main.rs  messages.rs  server.rs
src/binary/: mod.rs  reader.rs  types.rs  writer.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/network/: client.rs  messages.rs  mod.rs  server.rs  utils.rs
src/network/transpiled/: item_slots.rs  mod.rs
src/proc_macros/: Cargo.toml
src/proc_macros/src/: lib.rs
src/world/: binary.rs  entity.rs  mod.rs  reader.rs  tile.rs  types.rs
src/world/transpiled/: README.md  drop_items.rs  drop_tile_items.rs  drop_wall_items.rs  invasions.rs  item_flags.rs  items.rs  mod.rs  npcs.rs  tile_flags.rs  tiles.rs  walls.rs
