[package]
name = "trust"
version = "0.1.0"
authors = ["Dim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
flate2 = "1.0"
directories = "5.0"
filetime = "0.2"
macros = { path = "macros" }
anyhow = "1.0"